# prism_training

./: .gitignore  README.md  loss.py  pyproject.toml  train_affs.py  train_enhance.py
prism_training/data/: consolidate_data.py  download_data.py
prism_training/train/: __init__.py  losses.py  models.py  nodes.py
prism_training/train/affs/: train.py  view_batch.py
prism_training/train/binary_channel_agnostic/: predict.py  train.py
prism_training/train/enhanced/: predict.py  train.py  view_batch.py
prism_training/train/synapses/: train.py
prism_training/train/synapses/excitatory/: train.py  view_batch.py
prism_training/train/uniform/: train.py
