[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "prism_training"
version = "0.0.1"
requires-python = ">=3.11"

dependencies = [
    "black",
    "boto3",
    "click",
    "dacapo-toolbox>=1.0.0",
    "edt",
    "funlib-learn-torch",
    "funlib.geometry>=0.3.0",
    "funlib.persistence >= 0.5.2",
    "gunpowder>=1.4.0",
    "lsds",
    "matplotlib>=3.10.6",
    "mwatershed>=0.5.0",
    "neuroglancer",
    "numba>=0.60",
    "scikit-learn>=1.5.2",
    "tensorboardX",
    "torch>=2.1.1",
    "torchvision",
    "tqdm",
    "volara>=1.0.2",
    "volara-torch>=1.0.1",
    "wandb",
    "zarr",
]

[project.optional-dependencies]
vis = ["funlib.show.neuroglancer"]

[tool.uv.sources]
"lsds" = { git = "https://github.com/pattonw/lsd" }
funlib-learn-torch = { git = "https://github.com/funkelab/funlib.learn.torch" }

[tool.setuptools.packages.find]
where = ["."]
include = ["prism_training"]

[tool.ruff]
# pyflakes, pycodestyle, isort
lint.select = ["F", "E", "W", "I001"]

[tool.funlib.persistence]
voxel_size_attr = "resolution"
